# GPU-Factory-Instructions

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  START_HERE_FOR_AGENTS.md  compose.yaml  pyproject.toml
deploy/systemd/: gpu-factory-api.service  gpu-factory-mcp.service  gpu-factory-worker.service
gpu_factory/: config.py  queue.py  schemas.py
gpu_factory/api/: auth.py  main.py
gpu_factory/mcp/: server.py
gpu_factory/worker/: jobs.py  runner.py
gpu_factory_instructions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: bootstrap-secrets.sh  install-user-services.sh  load-env.sh  start-api.sh  start-mcp.sh  start-worker.sh
