[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-factory-instructions"
version = "0.1.0"
description = "Safer DGX-local GPU job API for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "redis>=5,<6",
  "rq>=1.16,<2",
  "pydantic>=2.8,<3",
  "chromadb>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gpu_factory*"]
